[package]
authors = ["Lee Bousfield <ljbousfield@gmail.com>"]
name = "ghcl"
version = "0.1.1"
description = "GitHub Clone"
repository = "https://github.com/PlasmaPower/ghcl"
readme = "README.md"
keywords = ["git", "github"]
categories = ["command-line-utilities", "command-line-interface"]
license = "MIT"

[dependencies]
clap = "2"
git2 = "0.6"
error-chain = "0.10"
app_dirs2 = "2"
serde = "1"
serde_derive = "1"
serde_yaml = "0.7"
regex = "0.2"
reqwest = "0.6"
rpassword = "0.4"
serde_json = "1"
